--- a/app/globals.css
+++ b/app/globals.css
@@ -2,26 +2,47 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: "04B_03";
+  src: url("/04B_03/04B_30__.TTF") format("truetype");
+  font-weight: 400;
+}
 :root {
   --background: #ffffff;
-  --foreground: #171717;
+  --foreground: #ffffff;
 }
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "04B_03", sans-serif;
+  font-size: 16px;
 }
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
+}
+.border-welcome {
+  -webkit-text-stroke: 10px #033954; /* width and color */
+}
+.border-logo {
+  -webkit-text-stroke: 3px #3910af; /* width and color */
+}
+.border-dashed-bottom {
+  border-bottom: 4px solid transparent; /* Tạo viền cơ bản */
+  border-image: repeating-linear-gradient(
+      to right,
+      black 0,
+      black 30px,
+      transparent 30px,
+      transparent 36px
+    )
+    10;
 }
