--- a/app/globals.css
+++ b/app/globals.css
@@ -32,30 +32,29 @@ body {
 
 .border-welcome {
   -webkit-text-stroke: 0.2px theme("colors.primary");
-   /* text-shadow: 0.0px 10.0px 0.02px #000, 9.8px 2.1px 0.02px #000, 4.2px -9.1px 0.02px #000, -8.0px -6.0px 0.02px #000, -7.6px 6.5px 0.02px #000, 4.8px 8.8px 0.02px #000, 9.6px -2.8px 0.02px #000, -0.7px -10.0px 0.02px #000, -9.9px -1.5px 0.02px #000, -3.5px 9.4px 0.02px #000, 8.4px 5.4px 0.02px #000, 7.1px -7.0px 0.02px #000, -5.4px -8.4px 0.02px #000, -9.4px 3.5px 0.02px #000, 1.4px 9.9px 0.02px #000, 10.0px 0.8px 0.02px #000, 2.9px -9.6px 0.02px #000, -8.7px -4.8px 0.02px #000, -6.6px 7.5px 0.02px #000, 5.9px 8.0px 0.02px #000, 9.1px -4.1px 0.02px #000, -2.1px -9.8px 0.02px #000, -10.0px -0.1px 0.02px #000, -2.2px 9.8px 0.02px #000, 9.1px 4.2px 0.02px #000, 
+  /* text-shadow: 0.0px 10.0px 0.02px #000, 9.8px 2.1px 0.02px #000, 4.2px -9.1px 0.02px #000, -8.0px -6.0px 0.02px #000, -7.6px 6.5px 0.02px #000, 4.8px 8.8px 0.02px #000, 9.6px -2.8px 0.02px #000, -0.7px -10.0px 0.02px #000, -9.9px -1.5px 0.02px #000, -3.5px 9.4px 0.02px #000, 8.4px 5.4px 0.02px #000, 7.1px -7.0px 0.02px #000, -5.4px -8.4px 0.02px #000, -9.4px 3.5px 0.02px #000, 1.4px 9.9px 0.02px #000, 10.0px 0.8px 0.02px #000, 2.9px -9.6px 0.02px #000, -8.7px -4.8px 0.02px #000, -6.6px 7.5px 0.02px #000, 5.9px 8.0px 0.02px #000, 9.1px -4.1px 0.02px #000, -2.1px -9.8px 0.02px #000, -10.0px -0.1px 0.02px #000, -2.2px 9.8px 0.02px #000, 9.1px 4.2px 0.02px #000, 
   6.1px -8.0px 0.02px #000, -6.5px -7.6px 0.02px #000, -8.8px 4.7px 0.02px #000, 2.7px 9.6px 0.02px #000, 10.0px -0.6px 0.02px #000, 1.5px -9.9px 0.02px #000, -9.3px -3.6px 0.02px #000, -5.5px 8.4px 0.02px #000, 7.0px 7.2px 0.02px #000, 8.5px -5.3px 0.02px #000, -3.4px -9.4px 0.02px #000, -9.9px 1.3px 0.02px #000, -0.8px 10.0px 0.02px #000, 9.6px 2.9px 0.02px #000, 4.9px -8.7px 0.02px #000, -7.5px -6.7px 0.02px #000, -8.1px 5.9px 0.02px #000, 4.0px 9.2px 0.02px #000, 9.8px -2.0px 0.02px #000, 0.2px -10.0px 0.02px #000, -9.7px -2.3px 0.02px #000, -4.3px 9.0px 0.02px #000, 7.9px 6.1px 0.02px #000 
   */
-  text-shadow:
-  6px 4px 2px theme("colors.primary"),
-  6px 0px 0px theme("colors.primary"),
-  6px -4px 0 theme("colors.primary"),
-  6px -8px 0 theme("colors.primary"),
-  6px -10px 0 theme("colors.primary"),
-  0px 4px 2px theme("colors.primary"),
-  -6px -2px 0px theme("colors.primary"),
-  -4px -6px 0 theme("colors.primary"),
-  -2px -8px 0 theme("colors.primary"),
-  -6px 0px 0 theme("colors.primary"),
-  -8px 2px 0 theme("colors.primary"),
-  -8px 8px 0px theme("colors.primary"),
-  -4px 10px 0 theme("colors.primary"),
-  -2px 12px 0 theme("colors.primary"),
-  6px 4px 0 theme("colors.primary");
+  text-shadow: 6px 4px 2px theme("colors.primary"),
+    6px 0px 0px theme("colors.primary"), 6px -4px 0 theme("colors.primary"),
+    6px -8px 0 theme("colors.primary"), 6px -10px 0 theme("colors.primary"),
+    0px 4px 2px theme("colors.primary"), -6px -2px 0px theme("colors.primary"),
+    -4px -6px 0 theme("colors.primary"), -2px -8px 0 theme("colors.primary"),
+    -6px 0px 0 theme("colors.primary"), -8px 2px 0 theme("colors.primary"),
+    -8px 8px 0px theme("colors.primary"), -4px 10px 0 theme("colors.primary"),
+    -2px 12px 0 theme("colors.primary"), 6px 4px 0 theme("colors.primary");
 }
 
 .border-logo {
   -webkit-text-stroke: 1px theme("colors.purple"); /* width and color */
-   text-shadow: 0 0 4px theme("colors.purple"), 0 0 4px theme("colors.purple"), 0 0 4px theme("colors.purple"), 0 0 4px theme("colors.purple"), 0 0 4px theme("colors.purple"),0 0 4px theme("colors.purple"), 0 0 4px theme("colors.purple"), 0 0 4px theme("colors.purple"), 0 0 4px theme("colors.purple"), 0 0 4px theme("colors.purple"),0 0 4px theme("colors.purple"), 0 0 4px theme("colors.purple"), 0 0 4px theme("colors.purple"), 0 0 4px theme("colors.purple"), 0 0 4px theme("colors.purple");
+  text-shadow: 0 0 4px theme("colors.purple"), 0 0 4px theme("colors.purple"),
+    0 0 4px theme("colors.purple"), 0 0 4px theme("colors.purple"),
+    0 0 4px theme("colors.purple"), 0 0 4px theme("colors.purple"),
+    0 0 4px theme("colors.purple"), 0 0 4px theme("colors.purple"),
+    0 0 4px theme("colors.purple"), 0 0 4px theme("colors.purple"),
+    0 0 4px theme("colors.purple"), 0 0 4px theme("colors.purple"),
+    0 0 4px theme("colors.purple"), 0 0 4px theme("colors.purple"),
+    0 0 4px theme("colors.purple");
 }
 
 .border-dashed-bottom {
@@ -70,38 +69,87 @@ body {
     10; */
 }
 
-.border-text{
+.border-text {
   -webkit-text-stroke: 0.5px theme("colors.primary");
-  text-shadow: 0 0 4px theme("colors.primary"), 0 0 4px theme("colors.primary"), 0 0 4px theme("colors.primary"), 0 0 4px theme("colors.primary"), 0 0 4px theme("colors.primary"),0 0 4px theme("colors.primary"), 0 0 4px theme("colors.primary"), 0 0 4px theme("colors.primary"), 0 0 4px theme("colors.primary"), 0 0 4px theme("colors.primary"),0 0 4px theme("colors.primary"), 0 0 4px theme("colors.primary");
+  text-shadow: 0 0 4px theme("colors.primary"), 0 0 4px theme("colors.primary"),
+    0 0 4px theme("colors.primary"), 0 0 4px theme("colors.primary"),
+    0 0 4px theme("colors.primary"), 0 0 4px theme("colors.primary"),
+    0 0 4px theme("colors.primary"), 0 0 4px theme("colors.primary"),
+    0 0 4px theme("colors.primary"), 0 0 4px theme("colors.primary"),
+    0 0 4px theme("colors.primary"), 0 0 4px theme("colors.primary");
 }
 
 .border-roadmap {
   -webkit-text-stroke: 1.5px white;
-   /* text-shadow: 0.0px 10.0px 0.02px #000, 9.8px 2.1px 0.02px #000, 4.2px -9.1px 0.02px #000, -8.0px -6.0px 0.02px #000, -7.6px 6.5px 0.02px #000, 4.8px 8.8px 0.02px #000, 9.6px -2.8px 0.02px #000, -0.7px -10.0px 0.02px #000, -9.9px -1.5px 0.02px #000, -3.5px 9.4px 0.02px #000, 8.4px 5.4px 0.02px #000, 7.1px -7.0px 0.02px #000, -5.4px -8.4px 0.02px #000, -9.4px 3.5px 0.02px #000, 1.4px 9.9px 0.02px #000, 10.0px 0.8px 0.02px #000, 2.9px -9.6px 0.02px #000, -8.7px -4.8px 0.02px #000, -6.6px 7.5px 0.02px #000, 5.9px 8.0px 0.02px #000, 9.1px -4.1px 0.02px #000, -2.1px -9.8px 0.02px #000, -10.0px -0.1px 0.02px #000, -2.2px 9.8px 0.02px #000, 9.1px 4.2px 0.02px #000, 
+  /* text-shadow: 0.0px 10.0px 0.02px #000, 9.8px 2.1px 0.02px #000, 4.2px -9.1px 0.02px #000, -8.0px -6.0px 0.02px #000, -7.6px 6.5px 0.02px #000, 4.8px 8.8px 0.02px #000, 9.6px -2.8px 0.02px #000, -0.7px -10.0px 0.02px #000, -9.9px -1.5px 0.02px #000, -3.5px 9.4px 0.02px #000, 8.4px 5.4px 0.02px #000, 7.1px -7.0px 0.02px #000, -5.4px -8.4px 0.02px #000, -9.4px 3.5px 0.02px #000, 1.4px 9.9px 0.02px #000, 10.0px 0.8px 0.02px #000, 2.9px -9.6px 0.02px #000, -8.7px -4.8px 0.02px #000, -6.6px 7.5px 0.02px #000, 5.9px 8.0px 0.02px #000, 9.1px -4.1px 0.02px #000, -2.1px -9.8px 0.02px #000, -10.0px -0.1px 0.02px #000, -2.2px 9.8px 0.02px #000, 9.1px 4.2px 0.02px #000, 
   6.1px -8.0px 0.02px #000, -6.5px -7.6px 0.02px #000, -8.8px 4.7px 0.02px #000, 2.7px 9.6px 0.02px #000, 10.0px -0.6px 0.02px #000, 1.5px -9.9px 0.02px #000, -9.3px -3.6px 0.02px #000, -5.5px 8.4px 0.02px #000, 7.0px 7.2px 0.02px #000, 8.5px -5.3px 0.02px #000, -3.4px -9.4px 0.02px #000, -9.9px 1.3px 0.02px #000, -0.8px 10.0px 0.02px #000, 9.6px 2.9px 0.02px #000, 4.9px -8.7px 0.02px #000, -7.5px -6.7px 0.02px #000, -8.1px 5.9px 0.02px #000, 4.0px 9.2px 0.02px #000, 9.8px -2.0px 0.02px #000, 0.2px -10.0px 0.02px #000, -9.7px -2.3px 0.02px #000, -4.3px 9.0px 0.02px #000, 7.9px 6.1px 0.02px #000 
   */
-  text-shadow:
-  6px 4px 2px white,
-  6px 0px 0px white,
-  6px -4px 0 white,
-  6px -8px 0 white,
-  6px -10px 0 white,
-  0px 4px 2px white,
-  -6px -2px 0px white,
-  -4px -6px 0 white,
-  -2px -8px 0 white,
-  -6px 0px 0 white,
-  -8px 2px 0 white,
-  -8px 8px 0px white,
-  -4px 10px 0 white,
-  -2px 12px 0 white,
-  6px 4px 0 white;
+  text-shadow: 6px 4px 2px white, 6px 0px 0px white, 6px -4px 0 white,
+    6px -8px 0 white, 6px -10px 0 white, 0px 4px 2px white, -6px -2px 0px white,
+    -4px -6px 0 white, -2px -8px 0 white, -6px 0px 0 white, -8px 2px 0 white,
+    -8px 8px 0px white, -4px 10px 0 white, -2px 12px 0 white, 6px 4px 0 white;
 }
 
 .border-roadmap-text {
   -webkit-text-stroke: 0.1px var(--stroke-color, white);
-   text-shadow: 0.0px 10.0px 0.02px var(--stroke-color, white), 9.8px 2.1px 0.02px var(--stroke-color, white), 4.2px -9.1px 0.02px var(--stroke-color, white), -8.0px -6.0px 0.02px var(--stroke-color, white), -7.6px 6.5px 0.02px var(--stroke-color, white), 4.8px 8.8px 0.02px var(--stroke-color, white), 9.6px -2.8px 0.02px var(--stroke-color, white), -0.7px -10.0px 0.02px var(--stroke-color, white), -9.9px -1.5px 0.02px var(--stroke-color, white), -3.5px 9.4px 0.02px var(--stroke-color, white), 8.4px 5.4px 0.02px var(--stroke-color, white), 7.1px -7.0px 0.02px var(--stroke-color, white), -5.4px -8.4px 0.02px var(--stroke-color, white), -9.4px 3.5px 0.02px var(--stroke-color, white), 1.4px 9.9px 0.02px var(--stroke-color, white), 10.0px 0.8px 0.02px var(--stroke-color, white), 2.9px -9.6px 0.02px var(--stroke-color, white), -8.7px -4.8px 0.02px var(--stroke-color, white), -6.6px 7.5px 0.02px var(--stroke-color, white), 5.9px 8.0px 0.02px var(--stroke-color, white), 9.1px -4.1px 0.02px var(--stroke-color, white), -2.1px -9.8px 0.02px var(--stroke-color, white), -10.0px -0.1px 0.02px var(--stroke-color, white), -2.2px 9.8px 0.02px var(--stroke-color, white), 9.1px 4.2px 0.02px var(--stroke-color, white), 
-  6.1px -8.0px 0.02px var(--stroke-color, white), -6.5px -7.6px 0.02px var(--stroke-color, white), -8.8px 4.7px 0.02px var(--stroke-color, white), 2.7px 9.6px 0.02px var(--stroke-color, white), 10.0px -0.6px 0.02px var(--stroke-color, white), 1.5px -9.9px 0.02px var(--stroke-color, white), -9.3px -3.6px 0.02px var(--stroke-color, white), -5.5px 8.4px 0.02px var(--stroke-color, white), 7.0px 7.2px 0.02px var(--stroke-color, white), 8.5px -5.3px 0.02px var(--stroke-color, white), -3.4px -9.4px 0.02px var(--stroke-color, white), -9.9px 1.3px 0.02px var(--stroke-color, white), -0.8px 10.0px 0.02px var(--stroke-color, white), 9.6px 2.9px 0.02px var(--stroke-color, white), 4.9px -8.7px 0.02px var(--stroke-color, white), -7.5px -6.7px 0.02px var(--stroke-color, white), -8.1px 5.9px 0.02px var(--stroke-color, white), 4.0px 9.2px 0.02px var(--stroke-color, white), 9.8px -2.0px 0.02px var(--stroke-color, white), 0.2px -10.0px 0.02px var(--stroke-color, white), -9.7px -2.3px 0.02px var(--stroke-color, white), -4.3px 9.0px 0.02px var(--stroke-color, white), 7.9px 6.1px 0.02px var(--stroke-color, white) 
- 
+  text-shadow: 0px 10px 0.02px var(--stroke-color, white),
+    9.8px 2.1px 0.02px var(--stroke-color, white),
+    4.2px -9.1px 0.02px var(--stroke-color, white),
+    -8px -6px 0.02px var(--stroke-color, white),
+    -7.6px 6.5px 0.02px var(--stroke-color, white),
+    4.8px 8.8px 0.02px var(--stroke-color, white),
+    9.6px -2.8px 0.02px var(--stroke-color, white),
+    -0.7px -10px 0.02px var(--stroke-color, white),
+    -9.9px -1.5px 0.02px var(--stroke-color, white),
+    -3.5px 9.4px 0.02px var(--stroke-color, white),
+    8.4px 5.4px 0.02px var(--stroke-color, white),
+    7.1px -7px 0.02px var(--stroke-color, white),
+    -5.4px -8.4px 0.02px var(--stroke-color, white),
+    -9.4px 3.5px 0.02px var(--stroke-color, white),
+    1.4px 9.9px 0.02px var(--stroke-color, white),
+    10px 0.8px 0.02px var(--stroke-color, white),
+    2.9px -9.6px 0.02px var(--stroke-color, white),
+    -8.7px -4.8px 0.02px var(--stroke-color, white),
+    -6.6px 7.5px 0.02px var(--stroke-color, white),
+    5.9px 8px 0.02px var(--stroke-color, white),
+    9.1px -4.1px 0.02px var(--stroke-color, white),
+    -2.1px -9.8px 0.02px var(--stroke-color, white),
+    -10px -0.1px 0.02px var(--stroke-color, white),
+    -2.2px 9.8px 0.02px var(--stroke-color, white),
+    9.1px 4.2px 0.02px var(--stroke-color, white),
+    6.1px -8px 0.02px var(--stroke-color, white),
+    -6.5px -7.6px 0.02px var(--stroke-color, white),
+    -8.8px 4.7px 0.02px var(--stroke-color, white),
+    2.7px 9.6px 0.02px var(--stroke-color, white),
+    10px -0.6px 0.02px var(--stroke-color, white),
+    1.5px -9.9px 0.02px var(--stroke-color, white),
+    -9.3px -3.6px 0.02px var(--stroke-color, white),
+    -5.5px 8.4px 0.02px var(--stroke-color, white),
+    7px 7.2px 0.02px var(--stroke-color, white),
+    8.5px -5.3px 0.02px var(--stroke-color, white),
+    -3.4px -9.4px 0.02px var(--stroke-color, white),
+    -9.9px 1.3px 0.02px var(--stroke-color, white),
+    -0.8px 10px 0.02px var(--stroke-color, white),
+    9.6px 2.9px 0.02px var(--stroke-color, white),
+    4.9px -8.7px 0.02px var(--stroke-color, white),
+    -7.5px -6.7px 0.02px var(--stroke-color, white),
+    -8.1px 5.9px 0.02px var(--stroke-color, white),
+    4px 9.2px 0.02px var(--stroke-color, white),
+    9.8px -2px 0.02px var(--stroke-color, white),
+    0.2px -10px 0.02px var(--stroke-color, white),
+    -9.7px -2.3px 0.02px var(--stroke-color, white),
+    -4.3px 9px 0.02px var(--stroke-color, white),
+    7.9px 6.1px 0.02px var(--stroke-color, white);
 }
 
+.border-dashed-top {
+  border-top: 4px solid transparent;
+  border-image: repeating-linear-gradient(
+      to right,
+      black 0,
+      black 30px,
+      transparent 30px,
+      transparent 36px
+    )
+    10;
+}
